--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
         <title>Frontend Mentor | Stats preview card component</title>
     </head>
     <body>
-        Get insights that help your business grow. Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency. 10k+ companies 314 templates 12m+ queries
+        <main>
+            <section>
+                <h1>Get insights that help your business grow.</h1>
+                <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
+            </section>
+
+            10k+ companies 314 templates 12m+ queries
+        </main>
 
         <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.</div>
     </body>
