--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
                 <h1>Get insights that help your business grow.</h1>
                 <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
             </section>
-
-            10k+ companies 314 templates 12m+ queries
+            <section>10k+ companies</section>
+            <section>314 templates</section>
+            <section>12m+ queries</section>
         </main>
 
-        <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.</div>
+        <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/TotallySly">Scott Lyon</a>.</div>
     </body>
 </html>
