--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <body>
         <main>
             <section>
+                <img src="images/image-header-mobile.jpg" alt="Employees working at their desk have fun" />
                 <h1>Get insights that help your business grow.</h1>
                 <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
             </section>
@@ -20,6 +21,8 @@
             <section>12m+ queries</section>
         </main>
 
-        <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/TotallySly">Scott Lyon</a>.</div>
+        <section>
+            <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/TotallySly">Scott Lyon</a>.</div>
+        </section>
     </body>
 </html>
