Add background styles and container class with style

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     </head>
     <body>
         <main>
-            <section>
-                <img src="images/image-header-mobile.jpg" alt="Employees working at their desk have fun" />
+            <section class="card-container">
+                <div class="hero-image"></div>
+                <!--
+                <img src="images/image-header-mobile.jpg" alt="Employees working at their desk have fun" /> -->
                 <h1>Get insights that help your business grow.</h1>
                 <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
             </section>
