--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <title>Frontend Mentor | Stats preview card component</title>
     </head>
     <body>
-        <main>
-            <section class="card-container">
+        <main class="card-container">
+            <section>
                 <div class="hero-image"></div>
-                <!--
-                <img src="images/image-header-mobile.jpg" alt="Employees working at their desk have fun" /> -->
+                <!-- <img src="images/image-header-mobile.jpg" alt="Employees working at their desk have fun" /> -->
+
                 <h1>Get insights that help your business grow.</h1>
                 <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
             </section>
