--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <body>
         <main class="card-container">
             <section>
-                <div class="hero-image"></div>
-                <!-- <img src="images/image-header-mobile.jpg" alt="Employees working at their desk have fun" /> -->
-
+                <div class="overlay">
+                    <div class="hero-image"></div>
+                </div>
                 <h1>Get insights that help your business grow.</h1>
                 <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
             </section>
