Finsihed overlay part of hero image

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <body>
         <main class="card-container">
             <section>
-                <div class="overlay">
+                <section class="hero-image-container">
                     <div class="hero-image"></div>
-                </div>
+                    <div class="overlay"></div>
+                </section>
                 <h1>Get insights that help your business grow.</h1>
                 <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
             </section>
