Add some CSS design to heading

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     </head>
     <body>
         <main class="card-container">
-            <section>
-                <section class="hero-image-container">
-                    <div class="hero-image"></div>
-                    <div class="overlay"></div>
-                </section>
-                <h1>Get insights that help your business grow.</h1>
+            <section class="hero-image-container">
+                <div class="hero-image"></div>
+                <div class="overlay"></div>
+            </section>
+            <section class="text-container">
+                <h1>Get <span>insights</span> that help your business grow.</h1>
                 <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
             </section>
             <section>10k+ companies</section>
