Add container and divs to stats

--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
                 <h1>Get <span>insights</span> that help your business grow.</h1>
                 <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
             </section>
-            <section>10k+ companies</section>
-            <section>314 templates</section>
-            <section>12m+ queries</section>
+            <section class="stats-container">
+                <div>10k+</div>
+                <div>companies</div>
+                <div>314</div>
+                <div>templates</div>
+                <div>12m+</div>
+                <div>queries</div>
+            </section>
         </main>
 
         <section>
