Fix style for text container p

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                 <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
             </section>
             <section class="stats-container">
-                <div>10k+</div>
-                <div>companies</div>
-                <div>314</div>
-                <div>templates</div>
-                <div>12m+</div>
-                <div>queries</div>
+                <h2 class="stats-heading">10k+</h2>
+                <div class="stats-wording">companies</div>
+                <h2 class="stats-heading">314</h2>
+                <div class="stats-wording">templates</div>
+                <h2 class="stats-heading">12m+</h2>
+                <div class="stats-wording">queries</div>
             </section>
         </main>
 
