Finish mobile design

--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
                 <div class="overlay"></div>
             </section>
             <section class="text-container">
-                <h1>Get <span>insights</span> that help your business grow.</h1>
-                <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
-            </section>
-            <section class="stats-container">
-                <h2 class="stats-heading">10k+</h2>
-                <div class="stats-wording">companies</div>
-                <h2 class="stats-heading">314</h2>
-                <div class="stats-wording">templates</div>
-                <h2 class="stats-heading">12m+</h2>
-                <div class="stats-wording">queries</div>
+                <div>
+                    <h1>Get <span>insights</span> that help your business grow.</h1>
+                    <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
+                </div>
+                <section class="stats-container">
+                    <h2 class="stats-heading">10k+</h2>
+                    <div class="stats-wording">companies</div>
+                    <h2 class="stats-heading">314</h2>
+                    <div class="stats-wording">templates</div>
+                    <h2 class="stats-heading">12m+</h2>
+                    <div class="stats-wording">queries</div>
+                </section>
             </section>
         </main>
 
