Style text for tablet devices and up. Must style/display photo and overlay to left

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="styles.css" />
         <title>Frontend Mentor | Stats preview card component</title>
     </head>
+    class="heading-paragraph"
     <body>
         <main class="card-container">
             <section class="hero-image-container">
@@ -16,17 +17,23 @@
                 <div class="overlay"></div>
             </section>
             <section class="text-container">
-                <div>
+                <div class="heading-paragraph">
                     <h1>Get <span>insights</span> that help your business grow.</h1>
                     <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
                 </div>
                 <section class="stats-container">
-                    <h2 class="stats-heading">10k+</h2>
-                    <div class="stats-wording">companies</div>
-                    <h2 class="stats-heading">314</h2>
-                    <div class="stats-wording">templates</div>
-                    <h2 class="stats-heading">12m+</h2>
-                    <div class="stats-wording">queries</div>
+                    <div class="stat-container-desktop">
+                        <h2 class="stats-heading">10k+</h2>
+                        <div class="stats-wording">companies</div>
+                    </div>
+                    <div class="stat-container-desktop">
+                        <h2 class="stats-heading">314</h2>
+                        <div class="stats-wording">templates</div>
+                    </div>
+                    <div class="stat-container-desktop">
+                        <h2 class="stats-heading">12m+</h2>
+                        <div class="stats-wording">queries</div>
+                    </div>
                 </section>
             </section>
         </main>
